styles/home/buySapling.module.scss
@import "../global/utilities";

.background{
	position: fixed;
	background: rgba(211, 211, 211, 0.37);
	width: 100vw;
	height: 100vh;
	z-index: 100;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	margin: auto;
	display: flex;
	align-items: center;
	justify-content: center;
}

.container{
	width: 50vw;
	height: 60vh;
	background: white;
	position: relative;
	display: flex;
	flex-wrap: wrap;
}

.close{
	position: absolute;
	top: 0;
	right: 0;
	font-size: 2vw;
	color: #484041;
}

.treeContainer{
	width: 50%;
	height: 100%;
	background-color: $greenBackground;
	display: flex;
	align-items: center;
	justify-content: center;
}

.textContainer{
	width: 50%;
	height: 100%;
	display: flex;
	align-items: center;
	flex-direction: column;

	h1{
		font-size: 3.8rem;
		margin-top: 8rem;
		font-weight: bold;
	}

	h2{
		color: $greenTitle;
		font-weight: bold;
		font-size: 2.3rem;
	}

	button{
		margin-top: 2.5rem;
		background-color: $buttonGray;
		padding: 1rem 3rem 1rem 3rem;
		color: white;
		font-weight: bold;
		font-size: 1.5rem;
		box-shadow: 0px 3.67059px 3.67059px 1.83529px rgba(0, 0, 0, 0.25);
		border-radius: 25.0267px;
		border: none;
		outline: none;
		transition: all 0.3s ease 0s;
	}

	button:hover{
		padding: 1.2rem 3.3rem 1.2rem 3.3rem;
	}
}

@media (max-width: 900px) {

	.container{
		width: 80vw;
		flex-direction: column;
	}
	.treeContainer{
		width: 100%;
		height: 50%;
	}
	.textContainer {
		width: 100%;
		height: 50%;
		h1{
			margin-top: 1.5rem;
		}
	}
	.close{
		font-size: 5vw;
	}
}

